Minor layout changes and code clean up.

--- a/PetGrooming/Content/styles.css
+++ b/PetGrooming/Content/styles.css
@@ -28,8 +28,9 @@ td {
     background: lightsteelblue;
 }
 
-.placeholder{
+.placeholder {
     background: gray;
+    max-width: 280px;
 }
 
 .float-left{
