--- a/PetGrooming/Views/Pet/Show.cshtml
+++ b/PetGrooming/Views/Pet/Show.cshtml
@@ -6,8 +6,6 @@
 
 <h2>Show Pet</h2>
 
-
-
 <div class="float-left form-group">
     <a href="/Pet/List" type="button" class="btn btn-default">Back to List</a><br/>
     <span class="bold-label">Name:</span><div class="form-control">@Model.PetName</div>
@@ -19,6 +17,6 @@
 </div>
 <div class="float-right">
     <div class="btn btn-default placeholder">Placeholder: Owner Details</div>
-    <div class="btn btn-default placeholder">Placeholder: Upcoming Groom Bookings Details</div>
+    <div class="btn btn-default placeholder">Placeholder: Upcoming Groom Booking</div>
 </div>
 
